--- a/style.css
+++ b/style.css
@@ -141,30 +141,30 @@ main .summary-section button:hover{
     background-color: hsl(252, 100%, 67%);
 }
 
-    @media (max-width: 375px) {
-        body{
-            display: block;
-            height: 100svh;
-        }
-        main{
-            flex-direction: column;
-            
-            border-radius: 0;
-            box-shadow: none;        
-    
-            width: 100%;
-            height: 100%;
-        }
-        main .result-section{
-            width: 100%;
-            border-bottom-left-radius: 1.5rem;
-            border-top-right-radius: 0;
-        }
-        main .result-section .score{
-            width: 50%;
-        }
-        main .summary-section{
-            width: 100%;
-            height: 100%;
-        }
+@media only screen and (max-device-width: 480px) {
+    body{
+        display: block;
+        height: 100svh;
     }
+    main{
+        flex-direction: column;
+        
+        border-radius: 0;
+        box-shadow: none;        
+
+        width: 100%;
+        height: 100%;
+    }
+    main .result-section{
+        width: 100%;
+        border-bottom-left-radius: 1.5rem;
+        border-top-right-radius: 0;
+    }
+    main .result-section .score{
+        width: 50%;
+    }
+    main .summary-section{
+        width: 100%;
+        height: 100%;
+    }
+}
